--- a/Practice/force-app/main/default/lwc/renderMethod/signInTemp.html
+++ b/Practice/force-app/main/default/lwc/renderMethod/signInTemp.html
@@ -1,7 +1,10 @@
 <template>
-    <div>
-        hello i am signIn template
-        <lightning-button variant="brand" label="Back" onclick={Back}></lightning-button>
-
-    </div>
+    <lightning-card title="signIn template">
+        <div>
+            hello i am signIn template
+            <lightning-button variant="brand" label="Back" onclick={Back}></lightning-button>
+    
+        </div>
+    </lightning-card>
+    
 </template>
