--- a/Practice/force-app/main/default/lwc/child/child.html
+++ b/Practice/force-app/main/default/lwc/child/child.html
@@ -1,8 +1,5 @@
 <template>
-    <lightning-card title="Child Lifecycle Hook`s">
-        <!-- <c-L-C-H-child></c-L-C-H-child> -->
-        <div class="slds-var-m-around_medium">
-            <!-- <c-L-C-H-child></c-L-C-H-child> -->
-        </div>
+    <lightning-card title="Child Component">
+        Harshad {SupPower}
     </lightning-card>
 </template>
